# BA-AD

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  pyproject.toml
.github/docs/: CHANGELOG.md  FAQ.md  LIBRARY.md  TODO.md
.github/workflows/: build.yml  build_core.yml
baad/: __init__.py  __main__.py
baad/FlatData/: __init__.py  dump.py
baad/crypto/: cipher.py
baad/extractors/: assetextractor.py  mediaextractor.py  studioextractor.py  tableextractor.py
baad/helpers/: filemanager.py  interface.py  json.py
baad/lib/: MersenneTwister.py  TableEncryptionService.py  TableService.py
baad/utils/: CatalogParser.py  apk.py  downloader.py  fetcher.py  filter.py  flatgen.py  list.py  parser.py
src/: lib.rs  main.rs
src/apk/: extract.rs  fetch.rs
src/catalog/: fetch.rs  parse.rs
src/cli/: args.rs  mod.rs  parse.rs
src/download/: downloader.rs  filter.rs
src/helpers/: api.rs  config.rs  error.rs  mod.rs
src/utils/: catalog.rs  file.rs  json.rs  mod.rs  network.rs
